# python-webscraper

./: .gitignore  README.md  pyproject.toml
html-pages/: first.html  www_jennifer_listgarten_com_0.html  www_jennifer_listgarten_com_0_1.html  www_jennifer_listgarten_com_0_1_3.html  www_jennifer_listgarten_com_0_1_4.html  www_jennifer_listgarten_com_0_1_6.html  www_jennifer_listgarten_com_0_1_7.html  (+10 more)
html-pages-async/: www_jennifer_listgarten_com_0.html  www_jennifer_listgarten_com_0_1_1.html  www_jennifer_listgarten_com_0_1_2.html  www_jennifer_listgarten_com_0_1_5.html  www_jennifer_listgarten_com_0_3.html  www_jennifer_listgarten_com_0_4.html  www_jennifer_listgarten_com_0_4_0.html  www_jennifer_listgarten_com_0_4_2.html  www_jennifer_listgarten_com_0_4_4.html  www_jennifer_listgarten_com_0_4_5.html  www_jennifer_listgarten_com_0_4_6.html  www_jennifer_listgarten_com_0_4_7.html  www_jennifer_listgarten_com_0_4_8.html  www_jennifer_listgarten_com_0_4_9.html  www_jennifer_listgarten_com_0_5.html  www_jennifer_listgarten_com_0_5_0.html  www_jennifer_listgarten_com_0_5_1.html  www_jennifer_listgarten_com_0_5_2.html  www_jennifer_listgarten_com_0_5_5.html  www_jennifer_listgarten_com_0_5_6.html  www_jennifer_listgarten_com_0_5_7.html  www_jennifer_listgarten_com_0_5_8.html  www_jennifer_listgarten_com_0_5_9.html  www_jennifer_listgarten_com_0_8.html  www_jennifer_listgarten_com_0_8_0.html  www_jennifer_listgarten_com_0_8_2.html  www_jennifer_listgarten_com_0_8_3.html  www_jennifer_listgarten_com_0_8_4.html  www_jennifer_listgarten_com_0_8_5.html
tests/: test_scraper.py
(+3 files in other folders)
