[project]
name = "python-webscraper"
version = "0.1.0"
description = ""
authors = [
    {name = "Trent Haines",email = "thaines@roblox.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]

[project.scripts]
python-webscraper = "python_webscraper.__main__:main"

[tool.poetry]
packages = [{include = "python_webscraper", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
